--- a/frontend/src/styles/SelfEmpathyModal.css
+++ b/frontend/src/styles/SelfEmpathyModal.css
@@ -1,41 +1,44 @@
 .confirm-modal {
     position: fixed;
     top: 0;
-    left: 0;
+    left: 0vw;
     width: 100vw;
     height: 100vh;
     z-index: 1000;
-    background: rgba(20, 20, 20, 0.7);
+    background: rgba(20, 20, 20, 0.4);
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding-top: 39vh;
+    padding-top: 63vh;
+    overflow: hidden;
 }
   
 .confirm-modal .modal-content {
     background: #f5f5f5;
-    border-radius: 20px;
-    padding: 32px 20px 24px 20px;
+    border-radius: 40px;
+    padding: 50px 20px 50px 20px;
     box-shadow: 0 8px 32px rgba(0,0,0,0.18);
     text-align: center;
     line-height: 1.5;
-    min-width: 280px;
-    max-width: 90vw;
+    min-width: 400px;
+    max-width: 100vw;
     position: relative;
+    max-height: 80vh;
+    overflow: hidden;
 }
 
 .confirm-modal .modal-title {
     font-size: 16px;
     font-weight: bold;
     color: black;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
 }
 
 .confirm-modal .modal-desc {
     font-size: 14px;
     color: #444;
-    margin-bottom: 28px;
-    line-height: 1.5;
+    margin-bottom: 25px;
+    line-height: 1.7;
     white-space: pre-line;
 }
 
@@ -45,8 +48,8 @@
 }
 
 .confirm-modal .modal-btn {
-    background: #7dbcff;
-    color: white;
+    background: #E3E7E9;
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: 25px;
     padding: 15px 30px;
