--- a/frontend/src/styles/SelfEmpathyModal.css
+++ b/frontend/src/styles/SelfEmpathyModal.css
@@ -9,21 +9,20 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding-top: 63vh;
+    padding-top: 67vh;
     overflow: hidden;
 }
   
 .confirm-modal .modal-content {
     background: #f5f5f5;
-    border-radius: 40px;
-    padding: 50px 20px 50px 20px;
-    box-shadow: 0 8px 32px rgba(0,0,0,0.18);
+    border-radius: 4vh 4vh 0 0;
+    padding: 5vh 2vw 5vh 2vw;
+    box-shadow: 0 0.8vh 3.2vh rgba(0,0,0,0.18);
     text-align: center;
     line-height: 1.5;
-    min-width: 400px;
-    max-width: 100vw;
+    min-width: 100%;
     position: relative;
-    max-height: 80vh;
+    max-height: 100%;
     overflow: hidden;
 }
 
@@ -31,13 +30,13 @@
     font-size: 16px;
     font-weight: bold;
     color: black;
-    margin-bottom: 35px;
+    margin-bottom: 2.5vh;
 }
 
 .confirm-modal .modal-desc {
     font-size: 14px;
     color: #444;
-    margin-bottom: 25px;
+    margin-bottom: 2.3vh;
     line-height: 1.7;
     white-space: pre-line;
 }
@@ -51,26 +50,26 @@
     background: #E3E7E9;
     color: rgb(0, 0, 0);
     border: none;
-    border-radius: 25px;
-    padding: 15px 30px;
+    border-radius: 2.5vh;
+    padding: 1.5vh 3vw;
     font-size: 14px;
     font-weight: 500;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 0.2vh 0.8vh rgba(0,0,0,0.1);
     transition: all 0.2s ease;
     white-space: nowrap;
-    min-width: 200px;
+    min-width: 20vw;
 }
 
 .confirm-modal .modal-btn:hover {
-    transform: translateY(-1px);
-    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    transform: translateY(-0.1vh);
+    box-shadow: 0 0.4vh 1.2vh rgba(0,0,0,0.15);
 }
 
 .confirm-modal .modal-btn:active {
     transform: translateY(0);
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 0.2vh 0.8vh rgba(0,0,0,0.1);
 }
-
+/* 
 .confirm-modal .modal-close {
     position: absolute;
     top: 16px;
@@ -79,7 +78,7 @@
     border: none;
     font-size: 22px;
     color: #bbb;
-}
+} */
 
 @media screen and (max-width: 360px) {
     .confirm-modal {
@@ -106,14 +105,14 @@
 .yesno-btn-group2 {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 1.2vh;
   width: 100%;
 }
 
 .yesno-btn2 {
   width: 100%;
   padding: 1.5vh 0;
-  border-radius: 30px;
+  border-radius: 3vh;
   border: none;
   background: #eeeeee;
   color: black;
@@ -130,7 +129,7 @@
 }
 
 .yesno-btn2.selected {
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0.4vh 1.2vh rgba(0, 0, 0, 0.4);
 }
 
 .yesno-btn2:disabled {
@@ -142,14 +141,14 @@
 .yesno-btn-group {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 1.2vh;
   width: 100%;
 }
 
 .yesno-btn {
   width: 100%;
   padding: 1.5vh 0;
-  border-radius: 30px;
+  border-radius: 3vh;
   border: none;
   background: #eeeeee;
   color: black;
@@ -166,7 +165,7 @@
 }
 
 .yesno-btn.selected {
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0.4vh 1.2vh rgba(0, 0, 0, 0.4);
 }
 
 .yesno-btn:disabled {
