[frontend] 자기공감 5번 질문 api 연결

--- a/frontend/src/styles/SelfEmpathyStep2Page.css
+++ b/frontend/src/styles/SelfEmpathyStep2Page.css
@@ -188,6 +188,7 @@
   color: black;
   margin: 1.2vh 0 2vh;
   opacity: 0;
+  white-space: pre-line;
   animation: fadeInUp 1s ease-out forwards 0.7s;
   text-align: left;
 }
