feat: 오늘 이후 날짜로 이동 불가 (MVP용 6월 예외 추가)

--- a/frontend/src/styles/IslandPage.css
+++ b/frontend/src/styles/IslandPage.css
@@ -61,6 +61,10 @@
   height: 21px;
 }
 
+.navigate-button.disabled {
+  opacity: 0.3;
+}
+
 .island-page .text-wrapper .calendar-button {
   cursor: pointer;
   display: inline-block;
