--- a/frontend/src/styles/IslandPage.css
+++ b/frontend/src/styles/IslandPage.css
@@ -17,6 +17,20 @@
   width: 100%;
 }
 
+.gradient-layer {
+  position: absolute;
+  z-index: 1;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  height: 400px;
+  border-radius: 50%;
+  pointer-events: none;
+  opacity: 0.7;
+  filter: blur(30px);
+}
+
 .island-page .text-wrapper {
   color: #ffffff;
   font-family: 'Line Seed Sans KR';
@@ -80,6 +94,7 @@
   width: 100%;
   height: 250px; /* 편지 뜨는 영역 높이 */
   margin-top: 32px;
+  z-index: 3;
 }
 
 .letter-box {
