feat: 홈으로 돌아가는 버튼 추가

--- a/frontend/src/styles/IslandPage.css
+++ b/frontend/src/styles/IslandPage.css
@@ -209,6 +209,20 @@
   cursor: pointer;
 }
 
+.homeButtonText {
+  position: absolute;
+  bottom: 13%;
+  left: 80%;
+  transform: translateX(-50%);
+  font-size: 13px;
+  background-color: rgba(255, 255, 255, 0.334);
+  padding: 4px 8px;
+  border-radius: 8px;
+  white-space: nowrap;
+  z-index: 3;
+  pointer-events: none;
+}
+
 /* LetterVisualization에서 쓰이는 팝업 */
 .popup {
   position: fixed;
